# loader

./: .gitignore  Cargo.toml  LICENSE  README.md  loader.sh.template  loader_deps.json
.github/workflows/: modloader.yml  rust.yml
bootstrap/: main.rs
decomp/: main.rs
loader/: Makefile  init_loader.sh  loader.sh  out
loader/io/github/joemama/loader/: main.kt  meta.kt  mixin.kt  mod_meta.kt  transform.kt
loader/io/github/joemama/loader/entrypoint/: Loader.kt
loader/mods/: test.txt
loader/src/kotlin/io/github/joemama/loader/: main.kt  meta.kt  mixin.kt  transform.kt
loader/src/kotlin/io/github/joemama/loader/meta/: meta.kt
loader/src/kotlin/io/github/joemama/loader/mixin/: mixin.kt
loader/src/kotlin/io/github/joemama/loader/transformer/: transform.kt
loader/testmod/: b.sh
loader/testmod/src/java/io/github/joemama/testmod/mixins/: ExampleMixin.java  MixinClientBrandRetriever.java  MixinMain.java
loader/testmod/src/kotlin/io/github/joemama/testmod/: ApiInit.kt  BootstrapTransform.kt  BootstrapTransformation.kt  Test.kt
loader/testmod/src/resources/: mods.toml  mymod.mixins.json  mymod.refmap.json
src/: assets.rs  bootstrap.rs  classpath.rs  decomp.rs  lib.rs  loader_deps.rs  main.rs  make_loader.rs
