[package]
name = "loader_make"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="*", features=["derive"]}
serde = { version = "*", features = ["derive"]}
serde_json = "*"
tokio = {version =  "*" , features = ["macros", "rt-multi-thread", "fs"]}
reqwest = {version="*", features=["json"]}
anyhow = "*"
futures = "*"
