[package]
name = "loader_make"
version = "0.1.0"
edition = "2021"
description = "A tool used to setup and run my modloader and mods created by it"
license = "MIT"

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "fs"] }
reqwest = { version = "0.11.*", features = ["json"] }
anyhow = "1.0.80"
futures = "0.3.*"
